adding intial db code
